Dec 01 - messing around with publish.css and formatting for embeds

--- a/daily notes/2020-12-01.md
+++ b/daily notes/2020-12-01.md
@@ -8,7 +8,7 @@ Woke up pretty early this morning, and mind got drifting to needing to do some C
 
 [[CFT]]  is a [[CFT|CloudFormation Template]] for AWS [[CloudFormation]]
 
-
+### What is an AWS [[CFT|CloudFormation Template]]?
 
 ![[AWS CloudFormation - Learn Template Basics#What is an AWS CFT CloudFormation Template]]
 	
