Dec 2nd morning tweaks

--- a/daily notes/2020-11-27.md
+++ b/daily notes/2020-11-27.md
@@ -52,3 +52,7 @@ Instead of just blindly importing my entire [Refind Bookmark Collection](https:/
 - Have I already read it, did I find it useful, why?
 - Am I sharing it? if so - why?
 - Am I referring to it again for something I am doing?
+
+
+
+- Previous Day:: [[2020-11-26]]
