--- a/daily notes/2020-11-28.md
+++ b/daily notes/2020-11-28.md
@@ -4,3 +4,6 @@ While I may be a bit crusty about tech-twitter career advice at times, as I feel
 
 One thing that I do wish I had done earlier on - was learn git and source control better.
 
+
+Previous Day:: [[2020-11-27]]
+
