--- a/daily notes/2020-11-30.md
+++ b/daily notes/2020-11-30.md
@@ -21,7 +21,7 @@ From Miro on [[The quick guide to making a team charter]]
 
 
 
-
+Previous Day:: [[2020-11-28]]
 
 # Footnotes
 [^1]: [[The quick guide to making a team charter]]
