--- a/daily notes/2020-12-01.md
+++ b/daily notes/2020-12-01.md
@@ -1,6 +1,6 @@
 # Dec 1st - Early Start
 
-Woke up pretty early this morning, and mind got drifting to needing to do some Candidate Review for the Senior Data Engineer Job Posting.
+Woke up pretty early this morning, and mind got drifting to needing to do some Candidate Review for the Senior Data Engineer Job Posting, and getting ready to [[_Interviewing Data Engineer]]
 
 ## Things I've looked up
 
@@ -21,3 +21,6 @@ Woke up pretty early this morning, and mind got drifting to needing to do some C
 ### Kaldi
 [[Kaldi]] is an open source Speech Recognition Toolkit
 #github [kalidi](https://github.com/kaldi-asr/kaldi)
+
+
+Previous Day:: [[2020-11-30]]
