--- a/daily notes/2020-11-26.md
+++ b/daily notes/2020-11-26.md
@@ -26,7 +26,7 @@ I'm currently an Engineering Manager now, and one of my motto's is
 
 > I'm more interested in building the people that build the software
 
-So I guess this can also be a spot for me to write about my thoughts on being a manager - and a Queer, Neurodiverse manager.
+So I guess this can also be a spot for me to write about my thoughts on being a manager - and a Queer, [[Neurodiverse]] manager.
 
 For example, what started as a tweet thread - but [[202011261951 NT Feedback - Speak up, but not like that|NT Feedback - Sepak up, but not like that]] 
 
